--- a/default.css
+++ b/default.css
@@ -133,7 +133,8 @@ textarea {
 }
 
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 
@@ -188,10 +189,13 @@ button a:hover {
     text-decoration-color: white;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .main {
     height:100%;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
+    width:100%;
 }
 
 #hero {
@@ -218,8 +222,8 @@ button a:hover {
 #navigation {
     position: absolute;
     top: 5%;
-    right: 5%;
-    font-size: 26px;
+    right: 4%;
+    font-size: 24px;
     text-align: right;
     transition: top 1.2s;
 }
@@ -253,15 +257,15 @@ svg {
 }
 
 #heading {
-    font-size: 38px;
+    font-size: 42px;
     font-family: monospace;
     overflow: hidden;
     white-space: nowrap;
     border-right: 3px solid black;
-    width: 13ch;
+    width: 10.3ch;
     animation:
-        typing 2s steps(13),
-        blink-caret .75s 2s step-end infinite;
+        typing 2.3s steps(13),
+        blink-caret .75s 2.1s step-end infinite;
 }
 
 @keyframes slidein {
@@ -297,7 +301,7 @@ svg {
         border-color: transparent
     }
 
-    50% {
+    90% {
         border-color: black;
     }
 }
@@ -417,6 +421,7 @@ blockquote {
 
 
 .project-container {
+    height: 500px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -434,7 +439,7 @@ blockquote {
 
 .project-heading {
     font-size: 28px;
-    margin-bottom: 70px;
+    margin-bottom: 20px;
 }
 
 .project-description {
@@ -475,26 +480,126 @@ button {
 }
 
 .space {
-    margin-top: 70px;
+    margin-top: 35px;
 }
 
-/* custom scrollbar */
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 8px;
 }
 
+/* Track */
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+    background: #f1f1f1;
 }
 
+/* Handle */
 ::-webkit-scrollbar-thumb {
-    background-color: #d6dee1;
-    border-radius: 20px;
-    border: 6px solid transparent;
-    background-clip: content-box;
+    background: #888;
 }
 
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #a8bbbf;
+    background: #555;
+}
+
+* {
+    box-sizing: border-box
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slides {
+    transition: transform 0.5s ease;
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.slides {
+    animation-name: fade;
+    animation-duration: 0.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .6
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
