--- a/dark.css
+++ b/dark.css
@@ -1,621 +1,54 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-/* black = #151515 , gold = #cc9966  red = #600*/
-.container {
-    position: absolute;
-    bottom: 80%;
-    left: 10%;
-}
-
-.container h1 {
-    color: var(--font-color);
-    font-family: sans-serif;
-}
-
-
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-/* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 40px;
-    width: 40px;
-    left: 0px;
-    bottom: 4px;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    box-shadow: 0 0px 15px #2020203d;
-    background: white url('https://i.ibb.co/FxzBYR9/night.png');
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-input:checked+.slider {
-    background-color: #2196f3;
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(24px);
-    -ms-transform: translateX(24px);
-    transform: translateX(24px);
-    background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-    padding: 0
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 100%;
-    font-weight: normal
-}
-
-ul {
-    list-style: none
-}
-
-button,
-input,
-select,
-textarea {
-    margin: 0
-}
-
-html {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit
-}
-
-img,
-video {
-    height: auto;
-    max-width: 100%
-}
-
-iframe {
-    border: 0
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0
-}
-
-td,
-th {
-    padding: 0
-}
-
-td:not([align]),
-th:not([align]) {
-    text-align: left
-}
-
-
-
 #navigation a:hover {
-    text-decoration-line: underline;
     text-decoration-color: white;
-}
-
-button a:hover {
-    text-decoration-color: white;
-}
-
-
-
-.main {
-    height: 100%;
-    width: 100%;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     background-color: #151515;
 }
 
-#hero {
-    width: 100vw;
-    height: 100vh;
-    margin: 0 auto;
-    margin-bottom: 5rem;
-}
-
-#welcome {
-    position: absolute;
-    bottom: 55%;
-    left: 10%;
-}
-
-
-@media only screen and (max-width: 500px) {
-
-    h1 {
-        font-size: 26px !important;
-    }
-}
-
 #navigation {
-    position: absolute;
-    top: 5%;
-    right: 4%;
-    font-size: 24px;
-    text-align: right;
-    transition: top 1.2s;
     color: #cc9966
 }
 
-#logo {
-    position: absolute;
-    top: 5%;
-    left: 10%;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: solid 2px black;
+#to-bottom svg {
+    fill: #cc9966;
 }
 
-svg {
-    fill: white;
-    width: 50px;
-    height: 50px;
-}
-
-#to-bottom {
-    position: absolute;
-    bottom: 4%;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-
-#navigation ul li {
-    margin-top: 20px;
-}
 
 #heading {
-    font-size: 42px;
-    font-family: monospace;
-    overflow: hidden;
-    white-space: nowrap;
-    color: #c96;
-    border-right: 3px solid black;
-    width: 10.3ch;
-    animation:
-        typing 2.3s steps(13),
-        blink-caret .75s 2.1s step-end infinite;
+    color: #cc9966;
+    border-right: 3px solid #cc9966 !important; 
 }
 
-@keyframes slidein {
-    from {
-        margin-left: -500px;
-    }
-
-    to {
-        margin-left: 0px;
-    }
-}
-
-/* typing effect */
-@keyframes typing {
-    from {
-        width: 0ch;
-    }
-
-    10% {
-        width: 0ch;
-    }
-
-    to {
-        width: 13ch;
-    }
-}
-
-/* typewriter cursor effect */
-@keyframes blink-caret {
-
-    from,
-    to {
-        border-color: transparent
-    }
-
-    90% {
-        border-color: black;
-    }
-}
-
-h2 {
-    font-size: 22px;
-}
 
 h3 {
-    font-size: 37px;
-    margin-bottom: 60px;
-    margin-top: 20px;
-    min-height: 160px;
-    padding-top: 120px;
     color: #cc9966;
-
-}
-
-p {
-    font-size: 16px;
-    margin-bottom: 20px;
 }
 
 #subline {
-    margin-top: 10px;
     color: white;
 }
 
 #site-content {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 5vw;
-    scroll-snap-align: start;
     color: white;
 }
 
-blockquote {
-    border-left: 3px solid #666;
-    color: #666;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-style: italic;
-    line-height: 1.8em;
-    padding: 1em 2em;
-    margin: 4rem 0;
-    position: relative;
-    transition: 0.2s border ease-in-out;
-    z-index: 0;
+a:hover{
+    text-decoration: underline !important;
 }
 
-#l {
-    font-size: 28px;
-    position: relative;
-    left: 13px;
-    top: 10px;
-
+button {
+    background-color: #c96 !important;
 }
 
-#b {
-    font-size: 28px;
-    position: relative;
-    left: 12px;
-    top: 14px;
-
+.dot {
+    background-color: #c96 !important;
 }
 
-#extra-l {
-    font-size: 16px;
-    position: relative;
-    left: 8px;
-    top: 5px;
-
-}
-
-#extra-b {
-    font-size: 16px;
-    position: relative;
-    left: 7px;
-    top: 9px;
-
-}
-
-#extra-header {
-    display: none;
-    position: fixed;
-    width: 100vw;
-    height: 50px;
-    padding: 5px;
-    margin: 0 auto;
-    z-index: 10;
-    background-color: white;
-    -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
-    -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
-    box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
-}
-
-#extra-logo {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    border: solid 1px black;
-}
-
-#extra-navigation {
-    margin-top: 5px;
-}
-
-#header-container {
-    margin: 0 5vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.moved-navigation {
-    top: 35vh !important;
-}
-
-
-.project-container {
-    height: 500px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
-    box-shadow: rgba(0, 0, 0, 0.24) 2px 5px 8px;
-}
-
-.project-container img {
-    width: 100%;
-    height: auto;
-}
-
-.project-heading {
-    
-    font-size: 28px;
-    margin-bottom: 20px;
-}
-
-.project-heading a:hover{
-    text-decoration: underline;
-}
-.project-description {
-    text-align: justify;
-}
-
-.project-button-container {
-    margin-bottom: 80px
-}
-
-.code-button, .demo-button {
-    font-weight: bold;
-    font-family: inherit;
-    font-size: 16px;
-    height: 40px;
-    padding: 5px 15px;
-    background-color: #c96;
-    border-radius: 20px;
-    border: none;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.cta-button {
-    font-size: 18px;
-    width: 200px;
-    height: 43px;
-    text-transform: uppercase;
-    padding: 10px 0;
-
-}
-
-
-#cta-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10rem;
-    margin-top: 5rem;
-}
-
-.space {
-    margin-top: 35px;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-/* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #151515 !important;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
-* {
-    box-sizing: border-box
-}
-
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    margin: auto;
-    overflow: hidden;
-}
-
-.slides {
-    transition: transform 0.5s ease;
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot-container .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #c96;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
-}
-
-/* Fading animation */
-.slides {
-    animation-name: fade;
-    animation-duration: 0.5s;
-}
-
-@keyframes fade {
-    from {
-        opacity: .6
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #a8bbbf;
-}
-
-.cta-button {
-    font-size: 18px;
-    width: 200px;
-    height: 43px;
-    text-transform: uppercase;
-    background-color: #c96;
-    padding: 10px 0;
-
+    background: #cc9966 !important;
 }
