--- a/default.css
+++ b/default.css
@@ -209,6 +209,7 @@ body {
     position: absolute;
     bottom: 55%;
     left: 10%;
+    gap: 0.7rem;
 }
 
 
@@ -336,7 +337,7 @@ p {
 }
 
 #subline {
-    margin-top: 10px;
+    margin-top: 16px;
 }
 
 #site-content {
@@ -616,4 +617,29 @@ button {
 
 .lang {
     font-style: italic;
+}
+
+.resume-button-container {
+  margin-top: 50px;
+}
+
+.resume-button {
+  font-family: inherit;
+  font-size: 16px;
+  color: white;
+  background-color: #151515;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+}
+
+.resume-button a {
+  color: white;
+  text-decoration: none;
+}
+
+.resume-button:hover {
+  background-color: #333;
 }
